crates/ssa-cache-schema/tests/ui/fail_duplicate_crate_attr.stderr
error: duplicate cache_schema crate attribute
 --> tests/ui/fail_duplicate_crate_attr.rs:4:42
  |
4 | #[cache_schema(crate = ssa_cache_schema, crate = ssa_cache_schema)]
  |                                          ^^^^^
